# copier-pdm-nox

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  copier.yml  mkdocs.yml  pyproject.toml  requirements.dev.txt  requirements.doc.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml.jinja  config.yml.jinja
.github/workflows/: doc.yml
news/: +404f6332.feat.txt
project/: .gitignore  CODE_OF_CONDUCT.md.jinja  CONTRIBUTING.md  CONTRIBUTING.md.jinja  README.md.jinja  mkdocs.yml.jinja  noxfile.py  noxfile.py.jinja  pyproject.toml.jinja  {% if git_provider == 'Azure DevOps' %}azure-pipelines.yml{% endif %}  {% if git_provider == 'Bitbucket' %}bitbucket-pipelines.yml{% endif %}  {% if git_provider == 'GitLab' %}.gitlab-ci.yml{% endif %}
project/.github/: PULL_REQUEST_TEMPLATE.md.jinja
project/.github/ISSUE_TEMPLATE/: bug_report.yaml.jinja  config.yml.jinja
project/.github/workflows/: ci-docs.yml.jinja  ci.yml  ci.yml.jinja  doc.yml
project/docs/: generate_api.py.jinja
project/docs/examples/: README.md.jinja
project/src/{{python_package_import_name}}/: __init__.py.jinja
project/tests/: __init__.py.jinja  test_{{python_package_import_name}}.py.jinja
project/{% if git_provider != 'None' %}.github{% endif %}/: FUNDING.yml.jinja
project/{% if git_provider != 'None' %}.github{% endif %}/ISSUE_TEMPLATE/: config.yml.jinja
project/{% if git_provider != 'None' %}.github{% endif %}/workflows/: ci-docs.yml.jinja
tests/: test_copier.bats
tests/expected/default/: .copier-answers.yml  mkdocs.yml  noxfile.py
tests/expected/default/.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml
tests/expected/no-git-provider/: .copier-answers.yml  LICENSE  README.md  noxfile.py
tests/expected/no-git-provider/docs/: generate_api.py
tests/expected/no-git-provider/src/test_repo/: __init__.py
tests/expected/no-git-provider/tests/: test_test_repo.py
tests/expected/no-publish-pypi/: .copier-answers.yml  README.md  noxfile.py  pyproject.toml
tests/expected/no-publish-pypi/.github/workflows/: ci-docs.yml  ci.yml
tests/expected/no-publish-pypi/docs/examples/: README.md
tests/expected/no-publish-pypi/tests/: __init__.py
tests/expected/uv-package-manager/: .copier-answers.yml  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml
tests/expected/uv-package-manager/.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
tests/expected/uv-package-manager/docs/: generate_api.py
tests/expected/uv-package-manager/src/test_repo/: __init__.py  cli.py
tests/expected/uv-package-manager/tests/: test_test_repo.py
tests/repos/default/: README.md
